Development path
================

Requirement status:
 * ? Requested, may move to a following release.
 * . Not yet implemented.
 * x Implemented but partial, untested or broken.
 * v Implemented and tested.

Version: 0.1.3.0, development, debug.
Requirements:
 * not yet selected.

Version: 0.3.0.0, development, debug.
Version 0.4.0.0, development release
Requirements:
 * not yet selected.

version: x.y.0.0, wishlist.
 * ? Add unit testing.
 * ? Add bug tracking tool.
 * ? Documentation in PDF format.
 * ? icon for Grayscales.
 * ? swap X and Y axis.
 * ? load/store different configurations.
 * ? Set Z height.
 * ? Set G0 speed.
 * ? Set F scale in mm/sec or mm/min (GUI only)
 * ? Set (0, 0) location.
 * ? Set laser power command using S or Q
 * ? Set comment mode using ';' or '(' and ')'
 * ? Report min/max at design time in GUI.
 * ? Add a border and grid (scaled)
 * ? Add form for settings.
 * ? Add lead in and lead out for acceleration compensation.
 * ? Add side rulers pattern.
 * ? Add up and down ruler pattern for backlash checking.
 * ? Add image encoding.
 * ? Rotate the test pattern over an arbitrary angle.
 * ? Add engraving pattern up, down and repeat.


Known problems
--------------

Issues and bugs are not yet recorded in a bug tracking system (which is an issue on its own).
For the time being, known problems are recorded here.

 4 v Can not edit text in tabs, must edit config XML to change it.
 3 v Path selector for safe file required.
 2 v Button [generate] does not report results to the user.
 1 v Button [generate] is always enabled, also when the configuration is not valid.


Releases
--------

Version: 0.1.2.0, development, debug.
Release date: 2024-10-21.
 * Added a console at the bottom of the main form, using Log4Net for output rendering.
 * Removed 'last time of generating' field from the main form.
 * Described the latest changes in the documentation.

Version: 0.1.1.0, development, debug.
Release date: 2024-10-17.