@@ -48,7 +48,7 @@
         type="As.Applications.Appenders.FireEventAppender">
         <layout type="log4net.Layout.PatternLayout">
             <!--<conversionPattern value="%-5level %message"  %date [%-8thread] %-5level %logger -  />-->
-            <conversionPattern value="%date %-5level - %message" />
+            <conversionPattern value="%date{HH:mm:ss} %-5level - %message" />
         </layout>
     </appender>
 
@@ -58,6 +58,10 @@
         <appender-ref ref="Log" />
         <appender-ref ref="DebugLog" />
     </root>
+
+    <logger name="Caliburn" additivity="true">
+        <level value="WARN" />
+    </logger>
 
     <logger name="UI" additivity="false">
         <level value ="ALL" />
