@@ -9,7 +9,9 @@ Requirement status:
 
 Version: 0.1.3.0, development, debug.
 Requirements:
- * not yet selected.
+ * v Limited Caliburn logging in debug log to WARN or higher.
+ * v Restored 'Save config when changed' on exit.
+ * v Report failing validity in console.
 
 Version: 0.3.0.0, development, debug.
 Version 0.4.0.0, development release
